--- a/drive-download-20170301T114909Z-001/admin_login.html
+++ b/drive-download-20170301T114909Z-001/admin_login.html
@@ -28,8 +28,7 @@
         </tr>
         <tr>
           <th colspan="2">
-            <input type="submit">
-          </th>
+          <a href="#" class="btn btn-lg btn-primary">Log in</a>          </th>
         </tr>
         </table>
       </center>    
